--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,7 @@
             "email": "iamgold0105@gmail.com"
         }
     ],
-    "minimum-stability": "dev"
+    "autoload": {
+        "psr-4": {"cinemasdk\\": "src/"}
+    }
 }
